amq-streams-example-kafka/base/amq-streams-example-service-registry-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: amq-streams-example-service-registry-route
spec:
  to:
    kind: Service
    name: amq-streams-example-service-registry-service
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
